--- a/web/index.html
+++ b/web/index.html
@@ -8,10 +8,22 @@
     <!-- D3 -->
     <script	src="libs/d3.min.js" charset="utf-8"></script>
 
+    <!-- Jquery -->
+    <script	src="libs/jquery.min.js" charset="utf-8"></script>
+
     <!-- Material Design Lite -->
     <link href= "https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href= "libs/mdl/material.orange-amber.min.css" rel="stylesheet">
     <script src="libs/mdl/material.min.js"></script>
+
+    <!-- Calendar Heatmap -->
+    <script	src="libs/moment.min.js" charset="utf-8"></script>
+    <link rel="stylesheet" type="text/css" href="libs/calendar-heatmap/calendar-heatmap.css">
+
+    <!-- Slick Slider -->
+    <link rel="stylesheet" type="text/css" href="libs/slick-1.8.0/slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="libs/slick-1.8.0/slick/slick-theme.css"/>
+    <script type="text/javascript" src="libs/slick-1.8.0/slick/slick.min.js"></script>
 
     <link href= "index.css" rel="stylesheet">
     <script	src="index.js" charset="utf-8"></script>
@@ -39,7 +51,16 @@
         </div>
     </header>
     <main class="mdl-layout__content">
-        <svg id="graph" style="width: 100%; height: 100%;"></svg>
+        <div id="side-bar"></div>
+          <div class="heatmap-container">
+            <div class="metrics">
+              <div>Questions</div>
+              <div>Answers</div>
+              <div>Comments</div>
+            </div>
+          </div>
+        </div>
+        <svg id="graph"></svg>
     </main>
 </body>
 </html>
