--- a/web/index.html
+++ b/web/index.html
@@ -26,6 +26,10 @@
     <link rel="stylesheet" type="text/css" href="libs/slick-1.8.0/slick/slick-theme.css"/>
     <script type="text/javascript" src="libs/slick-1.8.0/slick/slick.min.js"></script>
 
+    <!-- Source -->
+    <script	src="src/d3graph.js" charset="utf-8"></script>
+    <script	src="src/d3heatmap.js" charset="utf-8"></script>
+    <script	src="src/data.js" charset="utf-8"></script>
     <link href= "index.css" rel="stylesheet">
     <script	src="index.js" charset="utf-8"></script>
 </head>
@@ -62,7 +66,19 @@
             </div>
           </div>
         </div>
-        <svg id="graph"></svg>
+        <svg id="graph">
+            <filter id="dropshadow" height="130%">
+                <feGaussianBlur in="SourceAlpha" stdDeviation="1"/> <!-- stdDeviation is how much to blur -->
+                <feOffset dx="1" dy="2" result="offsetblur"/> <!-- how much to offset -->
+                <feComponentTransfer>
+                    <feFuncA type="linear" slope="0.3"/> <!-- slope is the opacity of the shadow -->
+                </feComponentTransfer>
+                <feMerge>
+                    <feMergeNode/> <!-- this contains the offset blurred image -->
+                    <feMergeNode in="SourceGraphic"/> <!-- this contains the element that the filter is applied to -->
+                </feMerge>
+            </filter>
+        </svg>
     </main>
 </div>
 </body>
