implemented time slider - still missing data integration

--- a/web/index.html
+++ b/web/index.html
@@ -26,6 +26,10 @@
     <link rel="stylesheet" type="text/css" href="libs/slick-1.8.0/slick/slick-theme.css"/>
     <script type="text/javascript" src="libs/slick-1.8.0/slick/slick.min.js"></script>
 
+    <!-- Time Slider -->
+    <link rel="stylesheet" type="text/css" href="libs/time-slider/d3.slider.css"/>
+    <script type="text/javascript" src="libs/time-slider/d3.slider.js"></script>
+
     <!-- Source -->
     <script	src="src/d3graph.js" charset="utf-8"></script>
     <script	src="src/d3heatmap.js" charset="utf-8"></script>
@@ -34,6 +38,7 @@
     <script	src="index.js" charset="utf-8"></script>
 </head>
 <body>
+<div id="time-slider"></div> <!-- only here temporarily -->
 <div class="mdl-layout mdl-js-layout" style="background: #eeeeee">
     <header class="mdl-layout__header" style="background: white;">
         <div class="mdl-layout__header-row">
