moved time slider to its own module; slider left and right limits are taken from data.nodes

--- a/web/index.html
+++ b/web/index.html
@@ -33,6 +33,7 @@
     <!-- Source -->
     <script	src="src/d3graph.js" charset="utf-8"></script>
     <script	src="src/d3heatmap.js" charset="utf-8"></script>
+    <script	src="src/d3timeSlider.js" charset="utf-8"></script>
     <script	src="src/data.js" charset="utf-8"></script>
     <link href= "index.css" rel="stylesheet">
     <script	src="index.js" charset="utf-8"></script>
