--- a/web/index.html
+++ b/web/index.html
@@ -31,9 +31,11 @@
     <script type="text/javascript" src="libs/time-slider/d3.slider.js"></script>
 
     <!-- Source -->
+    <script	src="src/d3bubble.js" charset="utf-8"></script>
     <script	src="src/d3graph.js" charset="utf-8"></script>
     <script	src="src/d3heatmap.js" charset="utf-8"></script>
-    <script	src="src/d3timeSlider.js" charset="utf-8"></script>
+    <script	src="src/d3time.js" charset="utf-8"></script>
+    <script	src="src/d3zoom.js" charset="utf-8"></script>
     <script	src="src/data.js" charset="utf-8"></script>
     <link href= "index.css" rel="stylesheet">
     <script	src="index.js" charset="utf-8"></script>
@@ -72,10 +74,10 @@
             </div>
           </div>
         </div>
-        <svg id="graph">
-            <filter id="dropshadow" height="130%">
-                <feGaussianBlur in="SourceAlpha" stdDeviation="1"/> <!-- stdDeviation is how much to blur -->
-                <feOffset dx="1" dy="2" result="offsetblur"/> <!-- how much to offset -->
+        <svg id="zoom" class="graph">
+            <filter id="dropshadow">
+                <feGaussianBlur in="SourceAlpha" stdDeviation="0"/> <!-- stdDeviation is how much to blur -->
+                <feOffset dx="0.5" dy="1" result="offsetblur"/> <!-- how much to offset -->
                 <feComponentTransfer>
                     <feFuncA type="linear" slope="0.3"/> <!-- slope is the opacity of the shadow -->
                 </feComponentTransfer>
@@ -84,6 +86,8 @@
                     <feMergeNode in="SourceGraphic"/> <!-- this contains the element that the filter is applied to -->
                 </feMerge>
             </filter>
+            <g id="graph"></g>
+            <g id="bubble"></g>
         </svg>
     </main>
 </div>
