new calendar heatmap fully functional

--- a/web/index.html
+++ b/web/index.html
@@ -66,13 +66,7 @@
     </header>
     <main class="mdl-layout__content">
         <div id="side-bar">
-          <div class="heatmap-container">
-            <div class="metrics">
-              <div>Questions</div>
-              <div>Answers</div>
-              <div>Comments</div>
-            </div>
-          </div>
+          <div class="calendar-heatmap"></div>
         </div>
         <svg id="zoom" class="graph">
             <filter id="dropshadow">
