Bunch of tweaks to the graph, heatmap, etc.

--- a/web/index.html
+++ b/web/index.html
@@ -64,7 +64,7 @@
             </ul>
         </div>
     </header>
-    <main class="mdl-layout__content">
+    <main class="mdl-layout__content" style="overflow: hidden;">
         <div id="side-bar">
           <div class="calendar-heatmap"></div>
         </div>
