--- a/web/index.html
+++ b/web/index.html
@@ -12,8 +12,9 @@
     <script	src="libs/jquery.min.js" charset="utf-8"></script>
 
     <!-- Material Design Lite -->
-    <link href= "https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href= "libs/mdl/material.orange-amber.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="libs/mdl/material.orange-amber.min.css" rel="stylesheet">
     <script src="libs/mdl/material.min.js"></script>
 
     <!-- Calendar Heatmap -->
@@ -22,6 +23,7 @@
     <script src="libs/calendar-heatmap/calendar-heatmap.js"></script>
 
     <!-- Source -->
+    <script	src="src/constants.js" charset="utf-8"></script>
     <script	src="src/d3bubble.js" charset="utf-8"></script>
     <script	src="src/d3graph.js" charset="utf-8"></script>
     <script	src="src/d3heatmap.js" charset="utf-8"></script>
@@ -39,6 +41,7 @@
             <img id="logo" src="img/logo.png" />
             <!-- Time navigator -->
             <svg id="time">
+                <path class="area" d=""></path>
                 <g class="axis"></g>
                 <g class="brush"></g>
             </svg>
