implementing side bar charts - donut charts and vote chart

--- a/web/index.html
+++ b/web/index.html
@@ -34,6 +34,8 @@
     <script	src="src/d3bubble.js" charset="utf-8"></script>
     <script	src="src/d3graph.js" charset="utf-8"></script>
     <script	src="src/d3heatmap.js" charset="utf-8"></script>
+    <script	src="src/d3votes.js" charset="utf-8"></script>
+    <script	src="src/d3donut.js" charset="utf-8"></script>
     <script	src="src/d3time.js" charset="utf-8"></script>
     <script	src="src/d3zoom.js" charset="utf-8"></script>
     <script	src="src/data.js" charset="utf-8"></script>
@@ -67,6 +69,9 @@
     <main class="mdl-layout__content">
         <div id="side-bar">
           <div class="calendar-heatmap"></div>
+          <div class="votes"></div>
+          <div class="donut-children"></div>
+          <div class="donut-related"></div>
         </div>
         <svg id="zoom" class="graph">
             <filter id="dropshadow">
