scatter plot functional; working on tooltip for scatter plot and vote chart

--- a/web/index.html
+++ b/web/index.html
@@ -67,9 +67,14 @@
     <main class="mdl-layout__content" style="overflow: hidden;">
         <div id="side-bar">
           <div class="calendar-heatmap"></div>
-          <div class="votes"></div>
+          <div class="votes">
+            <div class="tooltip"></div>
+          </div>
           <div class="donut-children"></div>
           <div class="donut-related"></div>
+          <div class="scatter">
+            <div class="tooltip"></div>
+          </div>
         </div>
         <svg id="zoom">
             <defs></defs>
