Disabled bubble, implemented sidebar event chain

--- a/web/index.html
+++ b/web/index.html
@@ -25,14 +25,14 @@
     <!-- Source -->
     <script	src="src/constants.js" charset="utf-8"></script>
     <script	src="src/d3bubble.js" charset="utf-8"></script>
+    <script	src="src/d3donut.js" charset="utf-8"></script>
     <script	src="src/d3graph.js" charset="utf-8"></script>
     <script	src="src/d3heatmap.js" charset="utf-8"></script>
-    <script	src="src/d3votes.js" charset="utf-8"></script>
-    <script	src="src/d3donut.js" charset="utf-8"></script>
     <script	src="src/d3scatter.js" charset="utf-8"></script>
+    <script	src="src/d3sidebar.js" charset="utf-8"></script>
     <script	src="src/d3time.js" charset="utf-8"></script>
+    <script	src="src/d3votes.js" charset="utf-8"></script>
     <script	src="src/d3zoom.js" charset="utf-8"></script>
-    <script	src="src/sidebar.js" charset="utf-8"></script>
     <script	src="src/data.js" charset="utf-8"></script>
     <link href= "index.css" rel="stylesheet">
     <script	src="index.js" charset="utf-8"></script>
