--- a/web/index.html
+++ b/web/index.html
@@ -83,17 +83,17 @@
             <div class="label">Offensive Reports</div>
             <!-- <div id="offensive-reports"></div> -->
             <div style="display: flex;">
-                <div class="title" style="width: 50%;">
-                    <div>Sub-Communities</div>
+                <div style="width: 50%;">
+                    <div class="title">Sub-Communities</div>
                     <div id="sub-communities"></div>
                 </div>
-                <div class="title" style="width: 50%;">
-                    <div>Related Communities</div>
+                <div style="width: 50%;">
+                    <div class="title">Related Communities</div>
                     <div id="related-communities"></div>
                 </div>
-            </div>
-            <div class="scatter">
-                <div class="tooltip"></div>
+                <div id="scatter">
+                    <div class="tooltip"></div>
+                </div>
             </div>
         </div>
         <svg id="zoom">
