donut's legend implemented

--- a/web/index.html
+++ b/web/index.html
@@ -67,7 +67,7 @@
     <main class="mdl-layout__content" style="overflow: hidden;">
         <div id="sidebar" class="mdl-card mdl-shadow--2dp">
             <div class="icon"></div>
-            <div class="tag">JavaScript</div>
+            <div class="tag">Global</div>
             <div class="title">Community Activity</div>
             <div id="heatmap"></div>
             <div class="title">Community Health</div>
