Heatmap: first release

--- a/web/index.html
+++ b/web/index.html
@@ -35,6 +35,7 @@
     <script	src="src/d3votes.js" charset="utf-8"></script>
     <script	src="src/d3zoom.js" charset="utf-8"></script>
     <script	src="src/data.js" charset="utf-8"></script>
+    <script	src="src/util.js" charset="utf-8"></script>
     <link href= "index.css" rel="stylesheet">
     <script	src="index.js" charset="utf-8"></script>
 </head>
@@ -73,7 +74,7 @@
             <svg id="heatmap">
                 <g class="axis-month"></g>
                 <g class="axis-week"></g>
-                <g class="map"></g>
+                <g class="chart"></g>
             </svg>
             <div class="title">Community Health</div>
             <div class="label">Upvotes/Downvotes</div>
