working more on donuts; transition between global and local view changes charts now

--- a/web/index.html
+++ b/web/index.html
@@ -82,17 +82,22 @@
             </div>
             <div class="label">Offensive Reports</div>
             <!-- <div id="offensive-reports"></div> -->
-            <div style="display: flex;">
+            <div id="communities">
                 <div style="width: 50%;">
-                    <div class="title">Sub-Communities</div>
+                    <div class="title">Sub Communities</div>
                     <div id="sub-communities"></div>
                 </div>
                 <div style="width: 50%;">
                     <div class="title">Related Communities</div>
                     <div id="related-communities"></div>
                 </div>
-                <div id="scatter">
-                    <div class="tooltip"></div>
+            </div>
+            <div id="scatter-container">
+                <div style="width: 90%;">
+                  <div class="title">Scatter</div>
+                  <div id="scatter">
+                      <div class="tooltip"></div>
+                  </div>
                 </div>
             </div>
         </div>
