metrics for scatter plot implemented

--- a/web/index.html
+++ b/web/index.html
@@ -94,7 +94,12 @@
             </div>
             <div id="scatter-container">
                 <div style="width: 90%;">
-                  <div class="title">Scatter</div>
+                  <!-- <div class="title">Scatter</div> -->
+                  <div class="metrics">
+                    <p class="active">Ans-Comm</p>
+                    <p>Ques-Ans</p>
+                    <p>UpVotes-DownVotes</p>
+                  </div>
                   <div id="scatter">
                       <div class="tooltip"></div>
                   </div>
