Time: first release

--- a/web/index.html
+++ b/web/index.html
@@ -24,6 +24,7 @@
 
     <!-- Source -->
     <link href= "css/d3heatmap.css" rel="stylesheet">
+    <link href= "css/d3time.css" rel="stylesheet">
     <script	src="src/constants.js" charset="utf-8"></script>
     <script	src="src/d3bubble.js" charset="utf-8"></script>
     <script	src="src/d3donut.js" charset="utf-8"></script>
@@ -49,7 +50,7 @@
             <svg id="time">
                 <path class="area" d=""></path>
                 <g class="axis"></g>
-                <g class="brush"></g>
+                <g class="focus"></g>
             </svg>
             <!-- Right aligned menu below button -->
             <button id="demo-menu-lower-right"
