improved the style for scatter plot

--- a/web/index.html
+++ b/web/index.html
@@ -95,7 +95,7 @@
                 </div>
             </div>
             <div id="scatter-container">
-                <div style="width: 90%;">
+                <div>
                   <!-- <div class="title">Scatter</div> -->
                   <div class="metrics">
                     <p class="active">Ans-Comm</p>
