finished styling scatter plot

--- a/web/index.html
+++ b/web/index.html
@@ -96,11 +96,13 @@
             </div>
             <div id="scatter-container">
                 <div>
-                  <div class="metrics">
-                    <p class="active">Ans-Comm</p>
-                    <p>Ques-Ans</p>
-                    <p>UpVotes-DownVotes</p>
-                  </div>
+                  <div id="metrics" class="mdl-tabs mdl-js-tabs mdl-js-ripple-effect">
+                    <div class="mdl-tabs__tab-bar">
+                      <span class="mdl-tabs__tab is-active">Questions-Answers</span>
+                      <span class="mdl-tabs__tab">Answers-Comments</span>
+                      <span class="mdl-tabs__tab">Upvotes-Downvotes</span>
+                    </div>
+                  </div> 
                   <div id="scatter">
                       <div class="tooltip"></div>
                   </div>
