--- a/web/index.html
+++ b/web/index.html
@@ -13,7 +13,7 @@
 
     <!-- Material Design Lite -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:200,400,800" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons:400,800" rel="stylesheet">
     <link href="libs/mdl/material.orange-amber.min.css" rel="stylesheet">
     <script src="libs/mdl/material.min.js"></script>
 
@@ -25,6 +25,7 @@
     <!-- Source -->
     <link href= "css/d3heatmap.css" rel="stylesheet">
     <link href= "css/d3time.css" rel="stylesheet">
+    <link href= "css/d3votes.css" rel="stylesheet">
     <script	src="src/constants.js" charset="utf-8"></script>
     <script	src="src/d3bubble.js" charset="utf-8"></script>
     <script	src="src/d3donut.js" charset="utf-8"></script>
@@ -72,15 +73,15 @@
         <div id="sidebar" class="mdl-card mdl-shadow--2dp">
             <!-- Top -->
             <div class="icon"></div>
-            <div class="tag">Global</div>
+            <div class="tag">&nbsp;</div>
             <!-- HEATMAP :: Community Activity -->
             <div class="title">Community Activity</div>
             <svg id="heatmap">
                 <g class="axis-month"></g>
                 <g class="axis-week"></g>
                 <g class="chart"></g>
-                <rect class="chart-area" fill="red" opacity="0"></rect>
-                <foreignObject class="tooltip" width="361" height="100">
+                <rect class="area" height="0" width="100%" fill="red" opacity="0"></rect>
+                <foreignObject class="tooltip" height="100">
                     <table class="day">
                         <thead>
                             <tr>
@@ -104,33 +105,53 @@
                     </table>
                     <table class="week">
                         <thead>
-                        <tr>
-                            <td colspan="2">Week 32</td>
-                        </tr>
+                            <tr>
+                                <td colspan="2">Week 39</td>
+                            </tr>
                         </thead>
                         <tbody>
-                        <tr>
-                            <td>Answers</td>
-                            <td class="answers">5624</td>
-                        </tr>
-                        <tr>
-                            <td>Comments</td>
-                            <td class="comments">8556</td>
-                        </tr>
-                        <tr>
-                            <td>Questions</td>
-                            <td class="questions">648</td>
-                        </tr>
+                            <tr>
+                                <td>Answers</td>
+                                <td class="answers">5624</td>
+                            </tr>
+                            <tr>
+                                <td>Comments</td>
+                                <td class="comments">8556</td>
+                            </tr>
+                            <tr>
+                                <td>Questions</td>
+                                <td class="questions">648</td>
+                            </tr>
                         </tbody>
                     </table>
                 </foreignObject>
             </svg>
             <!-- Community Health -->
             <div class="title">Community Health</div>
-            <div class="label">Upvotes/Downvotes</div>
-            <div id="upvotes-downvotes">
-                <div class="tooltip"></div>
-            </div>
+            <svg id="votes">
+                <g class="downvotes"></g>
+                <g class="upvotes"></g>
+                <rect class="area" height="100%" width="100%" fill="red" opacity="0"></rect>
+                <foreignObject class="tooltip" height="80">
+                    <table>
+                        <thead>
+                            <tr>
+                                <td colspan="2">Week 39</td>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Upvotes</td>
+                                <td class="upvotes">562</td>
+                            </tr>
+                            <tr>
+                                <td>Downvotes</td>
+                                <td class="downvotes">855</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </foreignObject>
+            </svg>
             <div class="label">Offensive Reports</div>
             <!-- <div id="offensive-reports"></div> -->
             <div id="communities">
